--- a/onlinetouch/src/main/resources/application.properties
+++ b/onlinetouch/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/cs544
 spring.datasource.username=cs544
 spring.datasource.password=201511
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.naming.strategy=physical-strategy=org.hibernate.cfg.ImprovedNamingstrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.database=mysql
@@ -9,3 +9,5 @@ spring.jpa.show-sql=true
 
 spring.mvc.view.prefix = /WEB-INF/views/
 spring.mvc.view.suffix= .jsp
+
+server.port=8082
