--- a/onlinetouch/pom.xml
+++ b/onlinetouch/pom.xml
@@ -90,6 +90,14 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Need this to compile JSP -->
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-jasper</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+		
 		<!-- https://mvnrepository.com/artifact/jstl/jstl -->
 		<dependency>
 			<groupId>jstl</groupId>
