bower update and index

--- a/onlinetouch/src/main/webapp/bower.json
+++ b/onlinetouch/src/main/webapp/bower.json
@@ -2,7 +2,7 @@
   "name": "onlinetouch",
   "version": "1.0.0",
   "description": "online shopping application",
-  "main": "index.html",
+  "main": "index.jsp",
   "moduleType": [],
   "keywords": [
     "onlinetouch",
