--- a/onlinetouch/pom.xml
+++ b/onlinetouch/pom.xml
@@ -112,6 +112,10 @@
 			<version>1.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
