angular validation , login configure

--- a/onlinetouch/src/main/resources/application.properties
+++ b/onlinetouch/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/cs544
-spring.datasource.username=cs544
-spring.datasource.password=201511
+spring.datasource.username=root
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.strategy=physical-strategy=org.hibernate.cfg.ImprovedNamingstrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
@@ -10,4 +10,4 @@ spring.jpa.show-sql=true
 spring.mvc.view.prefix = /WEB-INF/views/
 spring.mvc.view.suffix= .jsp
 
-server.port=8082
+server.port=8080
